# GeneFEAST

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  GO_BP_24h_0.0001_4GF.csv  GO_BP_24h_0.0001_4GF_basic.csv  GO_BP_3h_0.0001_4GF.csv  GO_BP_3h_0.0001_4GF_basic.csv  GO_BP_3h_0.001_4GF.csv  GO_BP_3h_0.001_4GF_basic.csv  LICENSE  MANIFEST.in  README.md  circos_and_upset.md  communities_overview.md  community_frame.md  config_template.yml  dependencies_and_requirements.md  enrichr2basic.sh  example_usage.md  example_usage_multi.md  featsi.md  graphical_grid_search.md  installation_usage.md  meta_3h.txt  meta_3h_24h.txt  meta_community_frame.md  mmc2_3h_24h_config.yml  mmc2_3h_24h_extra_annotations.txt  mmc2_3h_24h_setup.yml  mmc2_3h_config.yml  mmc2_3h_setup.yml  pyproject.toml  setup_template.yml  setup_template_2.yml  setup_template_3.yml  setup_template_4.yml  setup_template_5.yml  sil_plot.md  (+4 more)
.github/workflows/: publish-pypi.yml  publish.yml
PERFORMANCE_TEST_INPUT/MULTI_FEA_MODE/: GO_BP_24h_0.0001_4GF_basic_PERFORMANCE_TEST.csv  __HOW_TO_RUN_PERFORMANCE_TEST__  mmc2_3h_24h_setup_PERFORMANCE_TEST.yml  mmc2_goi_24h_PERFORMANCE_TEST.csv
PERFORMANCE_TEST_INPUT/SINGLE_FEA_MODE/: __HOW_TO_RUN_PERFORMANCE_TEST__  mmc2_3h_setup_PERFORMANCE_TEST.yml  mmc2_goi_3h_PERFORMANCE_TEST.csv
example_outputs/mmc2_3h_24h_output/: 01_communities_paramcomparison_oc.html  01_communities_silhouette.html  01_communities_summary.html  mmc2_3h_mmc2_24h_main.html
example_outputs/mmc2_3h_output/: log.txt  mmc2_3h_report.html
example_outputs/multi_genefeast_example/: GeneFEAST_REPORT_mmc2_3h_mmc2_24h.html  gfmulti_featsi01_communities_paramcomparison_ji.html  gfmulti_featsi01_communities_paramcomparison_oc.html  gfmulti_featsi01_communities_silhouette.html  gfmulti_featsi01_communities_summary.html  gfmulti_featsi01_report.html  log.txt
example_outputs/multi_genefeast_example/GeneFEAST_TABLES_mmc2_3h_mmc2_24h/: GeneFEAST_TABLE_gfmulti_featsi01.csv
example_outputs/single_genefeast_example/: GeneFEAST_REPORT_mmc2_3h.html  GeneFEAST_TABLE_mmc2_3h.csv  gf_mmc2_3h.html  gf_mmc2_3h_communities_paramcomparison_ji.html  gf_mmc2_3h_communities_paramcomparison_oc.html  gf_mmc2_3h_communities_silhouette.html  log.txt
example_outputs/single_genefeast_example/mmc2_3h_output/: mmc2_3h_communities_paramcomparison_oc.html  mmc2_3h_communities_summary.html  mmc2_3h_report.csv
genefeast/: gf.py  gf_base.py  gf_classes.py  gf_config.py  gf_multi.py
mmc2_3h_24h_output/: 01_communities_paramcomparison_ji.html  01_report.csv  01_report.html  log.txt
mmc2_3h_output/: mmc2_3h_communities_paramcomparison_ji.html  mmc2_3h_communities_silhouette.html
single_gf_example_inputs/: mmc2_3h_setup.yml
tests/: test_gf_base.py
