[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genefeast"
version = "0.0.15"
authors = [
  { name="Avigail Taylor", email="avigail.taylor@well.ox.ac.uk" },
]
description = "Gene-centric functional enrichment analysis summarisation tool"
readme = "README.md"
requires-python = "==3.7.*"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'matplotlib == 3.3.3',
    'numpy == 1.17.2',
    'pandas == 0.25.2',
    'seaborn == 0.11.2',
    'upsetplot == 0.4.1',
    'goatools == 1.0.14',
    'scipy == 1.3.2',
    'networkx == 2.5',
    'lxml == 4.4.1',
    'beautifulsoup4 == 4.8.0',
    'pillow == 6.2.0',
    'PyYAML == 5.1.2'
]

[tool.setuptools]
include-package-data = true

[project.scripts]
gf = "genefeast:gf.main"
gf_multi = "genefeast:gf_multi.main"

[project.urls]
"Homepage" = "https://avigailtaylor.github.io/GeneFEAST/"
"Source Code" = "https://github.com/avigailtaylor/GeneFEAST"
