[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "genefeast"
version = "0.0.23"
authors = ["Avigail Taylor <avigail.taylor@well.ox.ac.uk>"]
description = "Gene-centric functional enrichment analysis summarisation tool"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://avigailtaylor.github.io/GeneFEAST/"
repository = "https://github.com/avigailtaylor/GeneFEAST"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
upsetplot = "^0.9.0"
goatools = "^1.4.4"
scipy = "^1.13.0"
networkx = "^3.3"
lxml = "^5.2.1"
beautifulsoup4 = "^4.12.3"
pillow = "^10.3.0"
pyyaml = "^6.0.1"
setuptools = "^69.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
gf = "genefeast:gf.main"
gf_multi = "genefeast:gf_multi.main"

