[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genefeast"
version = "0.0.28"
authors = [
  { name="Avigail Taylor", email="avigail.taylor@well.ox.ac.uk" },
]
description = "Gene-centric functional enrichment analysis summarisation tool"
readme = "README.md"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'matplotlib == 3.8.4',
    'numpy == 1.26.4',
    'pandas == 2.2.2',
    'seaborn == 0.13.2',
    'upsetplot == 0.9.0',
    'goatools == 1.4.4',
    'scipy == 1.13.0',
    'networkx == 3.3',
    'lxml == 5.2.1',
    'beautifulsoup4 == 4.12.3',
    'pillow == 10.3.0',
    'PyYAML == 6.0.1',
    'scikit-learn == 1.5.2',
    'python-circos == 0.3.0',
    'pydot == 3.0.2'
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["genefeast"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.setuptools]
include-package-data = true

[project.scripts]
gf = "genefeast:gf.main"
gf_multi = "genefeast:gf_multi.main"

[project.urls]
"Homepage" = "https://avigailtaylor.github.io/GeneFEAST/"
"Source Code" = "https://github.com/avigailtaylor/GeneFEAST"
